# piqrypt

./: .gitignore  AUDIT_COHERENCE.md  CERTIFICATION_PRICING.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  DEVELOPER_DOCS.md  INTEGRATION.md  LICENSE  LICENSE-SCHEMA.md  QUICK-START.md  README.md  SECURITY.md  TIERS_PRICING.md  TRUSTGATE_POLICY(1).md  __init__.py  apply_and_rebuild.ps1  auth_middleware.py  benchmark_report.txt  benchmark_results.json  conftest.py  fix2.py  fix_auth.py  piqrypt_start.py  pyproject.toml  pytest.ini  quickstart_dev.py  quickstart_session.py  run_bridges.py  smoke_test.py  smoke_test_trustgate.py  start_business.ps1  start_enterprise.ps1  start_free.ps1  start_pro.ps1  start_startup.ps1  start_team.ps1  vigil_check.js
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/scripts/: sync_aiss.py
.github/workflows/: ci.yml  publish.yml  sync_to_aiss.yml
agents/: AGENT_PROMPT.md  README.md
agents/examples/: hr-assistant.py  trading-bot.py
aiss/: LICENSE  __init__.py  a2a.py  a2c_detector.py  agent_context.py  agent_registry.py  anomaly_monitor.py  archive.py  authority.py  badges.py  bridge_protocol.py  canonical.py  cert_badges.py  certification.py  chain.py  exceptions.py  exports.py  external_cert.py  fork.py  history.py  identity.py  identity_session.py  index.py  key_store.py  license.py  logger.py  memory.py  migration.py  replay.py  rfc3161.py  stamp.py  stamp_aiss2.py  telemetry.py  trust_score.py  tsi_engine.py  verify.py
aiss/ca/: piqrypt-ca-public.key
aiss/crypto/: __init__.py  dilithium_liboqs.py  ed25519.py
aiss/schemas/: aiss1_event.schema.json  aiss1_identity.schema.json  audit.schema.json
aiss/templates/: decrypt.py
benchmarks/: benchmark_pcp.py  run_benchmark.ps1
bridges/: LICENSE  conftest.py
bridges/autogen/: README.md  __init__.py  conftest.py  test_piqrypt_autogen.py
bridges/crewai/: README.md  __init__.py  test_piqrypt_crewai.py
bridges/hermes/: README.md  __init__.py  plugin.yaml  pyproject.toml  test_piqrypt_hermes.py
bridges/langchain/: README.md  __init__.py  test_piqrypt_langchain.py
bridges/mcp/: README.md  __init__.py  test_piqrypt_mcp.py
bridges/ollama/: README.md  __init__.py  pyproject.toml  test_piqrypt_ollama.py
bridges/openclaw/: README.md  __init__.py  test_piqrypt_openclaw.py
bridges/ros/: README.md  __init__.py  piqrypt_ros.py  test_piqrypt_ros.py
bridges/rpi/: README.md  __init__.py  piqrypt_rpi.py  test_piqrypt_rpi.py
bridges/session/: README.md  __init__.py  test_piqrypt_session.py
cli/: LICENSE  __init__.py  auth_middleware.py  cmd_onboarding.py  main.py  onboarding_welcome.py  piqrypt_start.py
demos/: README.md  demo_families.py  demo_piqrypt_live.py  demo_trustgate_flow.py  start_families.ps1  start_legacy.ps1
docs/: A2A_GUIDE.md  A2A_HANDSHAKE_GUIDE.md  A2A_SESSION_GUIDE.md  BADGES.md  IMPLEMENTATION_STATUS.md  LICENSE-SYSTEM.md  LOGGING.md  LOGS-REFERENCE.md  OPENCLAW_INTEGRATION.md  PCP_Protocol_Paper.md  PIQRYPT_WHITEPAPER_v1.5.0.md  README NEW.md  README.md  RFC.md  RFC_AISS_v2.0.md  RFC_AISS_v2.0_narrative.md  Real_World_Use_Cases.md  TELEMETRY.md  TRUST SCORING System — Technical.md  TRUST_SCORING_Technical_v2.0.md  TRUST_SCORING_Technical_v2.1.md  TSI_Trust_Stability_Index.md  Vigil_Continuous_Monitoring.md  WHITEPAPER_v2.0.md
docs/diagrams/: README.md
docs/research/: AI-Driven Malware Requires Cryptographic Accountability.docx  When AI Becomes Part of the C2 Loop.docx
examples/: create_principal.py
piqrypt/: __init__.py
scripts/: bump_version.py  generate_ca_key.py  validate_certification_request.py
static/onboarding/: index.html
test_vectors/: canonical.json  events.json  fork.json  identity.json  replay.json
tests/: __init__.py  run_all.py  test_a2a.py  test_aiss_a2c_detector.py  test_aiss_agent_registry.py  test_aiss_anomaly_monitor.py  test_aiss_identity.py  test_aiss_identity_session.py  test_aiss_key_store.py  test_aiss_memory.py  test_aiss_migration.py  test_aiss_trust_score.py  test_aiss_tsi_engine.py  test_archive_index.py  test_bridge_protocol.py  test_bridges_ollama.py  test_certification.py  test_cli_authority.py  test_cli_certified_export.py  test_external_cert.py  test_integration.py  test_license.py  test_memory_index.py  test_rfc3161_e2e.py  test_security_chain.py  test_security_keystore.py  test_security_memory.py  test_security_migration.py  test_security_registry.py  test_security_session.py  test_sprint1a.py  test_vectors.py  test_vigil_server.py
trustgate/: LICENSE  TRUSTGATE_SPEC_v1.0.docx  __init__.py  audit_journal.py  decision.py  decision_queue.py  human_principal.py  notifier.py  policy.yaml  policy_engine.py  policy_loader.py  policy_versioning.py  smoke_test_trustgate.py  trustgate_server.py
trustgate/console/: trustgate_console.html
trustgate/profiles/: ai_act_high_risk.yaml  anssi_strict.yaml  nist_balanced.yaml
trustgate/tests/: test_sprint1.py  test_sprint2.py  test_sprint3.py
vigil/: LICENSE  vigil_server.py  vigil_v4_final.html
