[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "piqrypt"
version = "1.6.0"
description = "AISS (Agent Identity and Signature Standard) - RFC-compliant cryptographic identity for autonomous agents"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "PiQrypt Contributors", email = "piqrypt@gmail.com"}
]
requires-python = ">=3.9"
keywords = ["cryptography", "identity", "agents", "ai", "signatures", "audit", "post-quantum", "langchain", "crewai", "autogen", "openclaw", "mpc-server"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "PyNaCl>=1.5.0",
    "canonicaljson>=2.0.0",
    "base58>=2.1.0",
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
aiss2 = [
    "liboqs-python>=0.8.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
piqrypt = "cli.main:main"

[project.urls]
Homepage = "https://github.com/piqrypt/piqrypt"
Documentation = "https://github.com/piqrypt/piqrypt#readme"
Repository = "https://github.com/piqrypt/piqrypt"
"Bug Tracker" = "https://github.com/piqrypt/piqrypt/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["aiss*", "cli*"]
exclude = ["tests*", "docs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=aiss --cov-report=term-missing --cov-report=html -v"

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.ruff.lint.per-file-ignores]
"aiss/__init__.py" = ["F401"]
"cli/__init__.py" = ["F401"]
"cli/main.py" = ["E501"]
"aiss/*.py" = ["E501", "E722"]
"aiss/rfc3161.py" = ["F401"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
