[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "piqrypt-hermes"
version = "1.0.0"
description = "PiQrypt cryptographic audit trail plugin for Hermes Agent"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "PiQrypt Contributors", email = "contact@piqrypt.com" }]
requires-python = ">=3.9"
dependencies = ["piqrypt>=1.8.3"]
keywords = ["hermes", "piqrypt", "audit", "agent", "cryptography", "aiss"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://piqrypt.com"
Documentation = "https://piqrypt.com/docs/integrations/hermes"
Repository = "https://github.com/piqrypt/piqrypt"

[project.entry-points."hermes_agent.plugins"]
piqrypt-audit = "piqrypt_hermes"

[tool.setuptools.packages.find]
where = ["."]
include = ["piqrypt_hermes*"]
